# brave-core

./: DEPS  Jenkinsfile  branch.txt  check_chromium_src_config.json5  package-lock.json  package.json
android/: android_browser_tests.gni  brave_java_resources.gni  brave_java_sources.gni
app/: app_management_strings.grdp  brave_command_ids.h  brave_generated_resources.grd  brave_main_delegate_browsertest.cc  brave_settings_strings.grdp  brave_strings.grd  brave_strings_override.grd  extensions_strings.grdp  generated_resources.grd  generated_resources_override.grd  nearby_share_strings.grdp  os_settings_search_tag_strings.grdp  os_settings_strings.grdp  password_manager_ui_strings.grdp  printing_strings.grdp  profiles_strings.grdp  settings_brave_strings.grdp  settings_strings.grdp  support_tool_strings.grdp
browser/: about_flags.cc  brave_app_controller_mac.mm  brave_browser_process_impl.cc  brave_content_browser_client.cc  brave_local_state_prefs.cc  brave_profile_prefs.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc  default_protocol_handler_utils_win.cc  sources.gni
chromium_src/: PRESUBMIT.py
components/: autofill_payments_strings.grdp  autofill_strings.grdp  commerce_strings.grdp  components_strings.grd  compose_strings.grdp  media_message_center_strings.grdp  page_info_strings.grdp  permissions_strings.grdp  policy_strings.grdp  privacy_sandbox_strings.grdp  site_settings_strings.grdp
components/challenge_bypass_ristretto/: BUILD.gn  batch_dleq_proof.cc  batch_dleq_proof.h  blinded_token.cc  blinded_token.h  dleq_proof.cc  dleq_proof.h  export.h  public_key.cc  public_key.h  signed_token.cc  signed_token.h  signing_key.cc  signing_key.h  token.cc  token.h  token_preimage.cc  token_preimage.h  unblinded_token.cc  unblinded_token.h  verification_key.cc  verification_key.h  verification_signature.cc  verification_signature.h  wrapper.cc  wrapper.h
components/debounce/browser/core/: BUILD.gn  debounce_component_installer.cc  debounce_component_installer.h  debounce_rule.cc  debounce_rule.h  debounce_service.cc  debounce_service.h
components/debounce/browser/core/test/: BUILD.gn  debounce_rule_unittest.cc
components/psst/: BUILD.gn  DEPS  psst_component_installer.cc  psst_component_installer.h  psst_rule.cc  psst_rule.h  psst_service.cc  psst_service.h  psst_tab_helper.cc  psst_tab_helper.h
components/psst/browser/content/: BUILD.gn  psst_tab_helper.cc  psst_tab_helper.h
components/psst/browser/core/: BUILD.gn  psst_component_installer.cc  psst_rule.cc  psst_rule.h  psst_rule_service.cc  psst_rule_service.h
components/psst/common/: BUILD.gn  features.cc  features.h
components/psst/content/: BUILD.gn  psst_tab_helper.cc  psst_tab_helper.h
components/psst/core/: BUILD.gn  psst_component_installer.cc  psst_component_installer.h  psst_rule.cc  psst_rule.h  psst_rule_service.cc  psst_rule_service.h  psst_service.cc  psst_service.h
ios/: BUILD.gn
patches/: base-BUILD.gn.patch  base-trace_event-builtin_categories.h.patch  build-android-gyp-proguard.py.patch  build-config-android-config.gni.patch  build-config-android-internal_rules.gni.patch  build-config-android-rules.gni.patch  build-config-compiler-BUILD.gn.patch  build-rust-run_build_script.py.patch  build-rust-rust_target.gni.patch  chrome-BUILD.gn.patch  (+190 more)
(+596 files in other folders)
